<?xml version="1.0"?>
<package format="3">
  <name>tf_helper</name>
  <version>2.0.0</version>
  <description>The tf_helper package.
  Contains the TFHelper class to help with transforming messages to different frames.
  Contains the StatusPublisher class to publish the heartbeats.
  Contains the MarkerViz class to help with visualizin detected cones.
  Contains the lidar_orient node used to publish a pointcloud in the horizontally aligned velodyne_frame</description>

  <maintainer email="asurt.fsai@gmail.com">ASU Racing Team, Formula AI Team</maintainer>

  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>asurt_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
